       controller. 
     * Internally, the implementation has been converted to use URIs 
       instead of URLs which resolves an issue with lack of encoding of 
       HTTP parameters  which contain which contain white spaces or other 
       special characters. 
     * HTTP related logs now appear in their own file under /logs/http/http.log 
       (Juha Lindfors, ORCJAVA-368)

  - One Wire: Added possibility to specify temperature values in
    either Celsius (default), Kelvin, Fahrenheit or Rankine scales, data
    property added for sending values to switches (Marcus Redeker)
  - Shell Command Execution: polling interval and regular expression
    filtering on return values supported, including regexp groups to 
    read in multiple sensor values at once. Support for using shell
    commands with sliders added (Marcus Redeker, Ivan Martinez)
  - Telnet: polling interval property added (Marcus Redeker), dedicated
    telnet log directory and telnet debug logs added (Juha Lindfors, ORCJAVA-328)
  - Date/Time : values updated once per minute instead of once per second
    (Marcus Redeker)
  - UDP : send hex values by prefixing command data with '0x' string.
    Receiving of UDP packets added (Marcus Redeker)
  - TCP : send hex values by prefixing command data with '0x' string,
    add polling interval and regular expression support for TCP payloads
    (Marcus Redeker, ORCJAVA-298)
  - Samsung SmartTV : support control of multiple Samsung devices in single
    installation (Ivan Martinez)
  - Touch panel gestures can now be bound to macros in addition to individual
    commands (Eric Bariaux, ORCJAVA-231)
  - Color selection widget is now supported by the controller (Eric Bariaux,
    Marcus Redeker, ORCJAVA-235, ORCJAVA-290)
  - Direct Tomcat container logging to /logs/container/tomcat-server.log 
    (Tomcat server logging) and /logs/container/appcontext.log (Controller
    web application logging) files, and output directed to standard output