@@ -63,8 +63,9 @@ class PanelState
 
   enum PartitionState implements State
   {
-    READY, NOTREADY, AWAYARMED, STAYARMED, AWAYARMEDND, STAYARMEDND, ALARM,
-    DISARMED, EXITDELAY, ENTRYDELAY, FAILTOARM, BUSY
+    READY, NOTREADY, AWAYARMED, STAYARMED,
+    AWAYARMEDND /* ND = NO DELAY */, STAYARMEDND /* ND = NO DELAY */,
+    ALARM, DISARMED, EXITDELAY, ENTRYDELAY, FAILTOARM, BUSY
   }
 
   /**
