@@ -110,9 +110,22 @@ public class UDPListenerCommand implements EventListener {
                  Sensor sensor = entry.getValue();
                  Pattern regexPattern = Pattern.compile(regex);
                  Matcher matcher = regexPattern.matcher(msg);
-                 if (matcher.find()) {
-                    sensor.update(""+System.currentTimeMillis());
-                 }
+
+                // This is a patch from ORCJAVA-392:
+                //
+                // If a regular expression group is defined and there's a match,
+                // the (first) group is returned as the event value instead of just a simple
+                // timestamp.
+
+                if (matcher.groupCount() > 0)
+                {
+                  sensor.update(matcher.group(1));
+                }
+
+                else
+                {
+                  sensor.update("" + System.currentTimeMillis());
+                }
               }
 
               // Reset the length of the packet before reusing it.
